# ipc-bus

./: .clang-format  CMakeLists.txt  LICENSE
example/: CMakeLists.txt  example_client.cpp  example_server.cpp  msg.h
include/: callback_vector.h  ipc_bus.h  ipc_codec.h  ipc_header.h  threadpool.h
